--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f8f9fa;
+  background-color: darkgrey;
   margin: 0;
   padding: 0;
   display: flex;
@@ -67,8 +67,10 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  width: 115%;
+  height: 400px;
+  border-radius: 12%;
+  background: linear-gradient(45deg, #000045, #4e4eaf);
 }
 
 /* Estilo para a caixa de login */
