--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,10 @@
 .login-container {
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: linear-gradient(45deg, #ff9800, #ff5722);
+    border-radius: 12%;
+    background: linear-gradient(45deg, #000045, #4e4eaf);
     color: white;
     font-family: Arial, sans-serif;
   }
@@ -30,4 +30,3 @@
   button:hover {
     background-color: #ddd;
   }
-  
