--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 12%;
-    background: linear-gradient(45deg, #000045, #4e4eaf);
+    background: linear-gradient(45deg, #620500, #af4e4e);
     color: white;
     font-family: Arial, sans-serif;
   }
