--- a/src/pages/CountryMenu/CountryMenu.css
+++ b/src/pages/CountryMenu/CountryMenu.css
@@ -3,10 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 95vh;
+    width: 137vh;
     background-size: cover;
     background-position: center;
     color: white;
+    border-radius: 3%;
   }
   
   .foods {
@@ -16,10 +18,15 @@
   
   .food-item {
     text-align: center;
+    font-size: larger;
   }
   
   .food-item img {
+    height: 100px;
     width: 150px;
     border-radius: 10px;
+    border: solid;
+    border-color: white;
+    border-radius: 15px;
   }
   
